--- a/lib/cilite/views/layout.haml
+++ b/lib/cilite/views/layout.haml
@@ -1,16 +1,16 @@
 %html
   %head
     %meta{:"http-equiv"=>"Content-Type", :content=>"text/html;charset=UTF-8"}
-    %title Tester
+    %title CiLite
     %link{:rel=>'stylesheet', :type=>'text/css', :href=>'/css', :media=>'screen,tv,projection'}
   %body
     #wrap
       #header
         %h1
-          %a{:href => '/'} Tester
+          %a{:href => '/'} CiLite
 
       #content
         = yield
 
       #footer
-        %a{:href => 'http://github.com/jugyo/tester'} Tester
+        %a{:href => 'http://github.com/jugyo/cilite'} CiLite
